packages/components/src/modal/Modal.module.css
.modal {
  font-family: var(--midas-typography-font-family);
  position: fixed;
  max-width: 75%;
  min-width: 300px;
  max-height: 90vh;
  overflow-y: auto;
  color: var(--midas-text-primary);
  border: none;

  /* make space for focus indicator (.dialog:focus-visible) */
  padding: 4px;
  margin: auto;

  &[data-entering] {
    /* animating in the modal causes popovers to miscalculate their size and positions */
    animation: none;
  }

  @media (forced-colors: active) {
    outline: 2px solid;
  }
}

.dialog {
  background-color: var(--midas-background-base);

  &:focus-visible {
    box-shadow: var(--midas-state-focus);
    outline: none;

    @media (forced-colors: active) {
      outline: var(--midas-state-focus-contrast-mode-outline) solid highlight;
    }
  }
}

.modalHeader {
  min-height: var(--midas-size-control);
  background-color: var(--midas-layer-01-base);
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  position: sticky;
  top: -4px;
  z-index: var(--midas-z-index-above);
}

.modalTitle {
  flex-grow: 1;
  place-self: center;
  padding-left: 1rem;
}

.modalBody {
  position: relative;
  padding: 1rem 2rem 2rem;
  font-family: var(--midas-typography-font-family);
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

